pylibftdi changes
=================

0.11.0
 * In progress...
0.10.3
 * lots more documentation, cleaned up, on readthedocs. Still in progress though.
 * Experimental support for multi-device interfaces ``Device(interface=1)``
0.10.2
 * include examples subpackage
 * ensure examples work under Python3
 * 'python -m pylibftdi.examples.led_flash' should now work and pulse D0
0.10.1
 * maintenance build to fix installation issues
 * USB_VID_LIST/USB_PID_LIST exposed directly as pylibftdi attributes
0.10
 * support for FT232H via iteration over lists USB_VID_LIST/USB_PID_LIST in driver.py (FT232H uses different PID)
 * support for 'buffering' - i.e. chunking reads and writes to allow interruption (i.e. KeyboardInterrupt) in what could otherwise be a very long uninterruptable extension code call.
 * reset device to serial mode on open() (previously could be left in bitbang mode)
 * moved docs -> /doc
 * moved pylibftdi/tests -> /tests - makes python -m unittest discover etc work better
 * removed legacy support for Driver() to acting as a Device()
 * API for Bus class now requires .device rather than .driver (this still needs improving at some point)
0.9
 * improved and extended tests
 * made a start on some Sphinx-based documentation
 * fixed long-standing issue with input from a BitBangDevice
 * allow the PID/VID to be changed
 * add new examples
   - basic web server to toggle / read IO bits
   - magic_candle.py - example of using input and output together
   - pin_read.py - read and match values on device pins
 * All of this needs some tidying, but it fixes some key issues and has been unreleased too long.
0.8.1
 * fix issue with bitbang following API changes in 0.8
 * add tests for bitbang mode
 * refactor tests; fix text-based tests in Python3
 * slight refactor Device() to improve testability (_read and _write methods)
0.8
 * added some unit tests
 * API changes:
   - when opening a device with a device_id parameter, this will now check